src/objects/OperatingSchedule__c.object
<CustomObject>
    <fields>
        <fullName>SM_1_Sunday__c</fullName>
        <label>Small 7</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_1_Thursday__c</fullName>
        <label>Small 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_1_Tuesday__c</fullName>
        <label>Small 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_1_Wednesday__c</fullName>
        <label>Small 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Friday__c</fullName>
        <label>Small 12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Monday__c</fullName>
        <label>Small 8</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Saturday__c</fullName>
        <label>Small 13</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Sunday__c</fullName>
        <label>Small 14</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Thursday__c</fullName>
        <label>Small 11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Tuesday__c</fullName>
        <label>Small 9</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_2_Wednesday__c</fullName>
        <label>Small 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <description>Defines the country  in which this record resides</description>
        <inlineHelpText>Country of record creator.</inlineHelpText>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Tasks_for_Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Tasks for Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Machine Clean Operating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Days_in_Week__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether a one or multiple operating tasks should be executed on an exact day.</inlineHelpText>
        <label>Specific Days in Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Operating: indicates the start date the schedule should start</description>
        <inlineHelpText>Please enter a Monday (can be in the past) for Daily batch executions and Sunday for Weekly batch executions. For Daily (NL): Create MON = First task THUR; Create TUE = First task FRI; Create WED = First task MON; Create THUR/FRI = First task WED</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskRescheduleLogic__c</fullName>
        <description>Indicated whether a Task should be postponed to after a holiday or preponed to the first available Business Day.</description>
        <label>Task Re-schedule Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Postpone</fullName>
                </value>
                <value>
                    <fullName>Prepone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeofContract__c</fullName>
        <description>Operating: indicates the type of contract the Schedule&apos;s Asset is under</description>
        <formula>TEXT(PhysicalAsset__r.Machine_Care__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the type of contract the Schedule&apos;s Asset is under</inlineHelpText>
        <label>Type of Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueSchedule__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to prevent physical assets from having more than one active operating schedule.</description>
        <label>UniqueSchedule</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Waterfilter_Months__c</fullName>
        <inlineHelpText>Please provide the month(s) for which a waterfilter job will need to be created.</inlineHelpText>
        <label>Waterfilter Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekly_Batch_Count__c</fullName>
        <formula>IF( 
	Specific_Days_in_Week__c = TRUE,
	(
		IF(
			NOT(ISBLANK(TEXT(SM_1_Monday__c))),
			IF(ISPICKVAL(SM_1_Monday__c, &quot;AM&quot;), 1, VALUE(TEXT(SM_1_Monday__c))),
			0) +

		IF(
			NOT(ISBLANK(TEXT(SM_1_Tuesday__c))),
			VALUE(TEXT(SM_1_Tuesday__c)),
			0) +

		IF(
			NOT(ISBLANK(TEXT(SM_1_Wednesday__c))),
			VALUE(TEXT(SM_1_Wednesday__c)),
			0) +

		IF(
			NOT(ISBLANK(TEXT(SM_1_Thursday__c))),
			VALUE(TEXT(SM_1_Thursday__c)),
			0) +

		IF(
			NOT(ISBLANK(TEXT(SM_1_Friday__c))),
			IF(ISPICKVAL(SM_1_Friday__c, &quot;PM&quot;), 1, VALUE(TEXT(SM_1_Friday__c))),
			0) +

		IF(
			NOT(ISBLANK(TEXT(SM_1_Saturday__c))),
			VALUE(TEXT(SM_1_Saturday__c)),
			0) +

		IF(
			NOT(ISBLANK(TEXT(SM_1_Sunday__c ))),
			VALUE(TEXT(SM_1_Sunday__c)),
			0)
	), 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekly Batch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Operating Schedule</label>
    <listViews>
        <fullName>All_Operating_Schedules</fullName>
        <columns>NAME</columns>
        <columns>PhysicalAsset__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Active__c</columns>
        <columns>Schedule_Type__c</columns>
        <columns>TypeofContract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule_Type__c</field>
            <operation>equals</operation>
            <value>Regular</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OperatingSchedule__c.Daily</value>
        </filters>
        <label>All Operating Schedules - Regular</label>
    </listViews>
    <listViews>
        <fullName>All_Operating_Schedules_MCO</fullName>
        <columns>NAME</columns>
        <columns>PhysicalAsset__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Active__c</columns>
        <columns>Schedule_Type__c</columns>
        <columns>TypeofContract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OperatingSchedule__c.Machine_Clean_Operating</value>
        </filters>
        <label>All Operating Schedules - MCO</label>
    </listViews>
    <listViews>
        <fullName>All_Operating_Schedules_Weekly</fullName>
        <columns>NAME</columns>
        <columns>PhysicalAsset__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Active__c</columns>
        <columns>Schedule_Type__c</columns>
        <columns>TypeofContract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule_Type__c</field>
            <operation>equals</operation>
            <value>Weekly</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OperatingSchedule__c.Weekly_Schedules</value>
        </filters>
        <label>All Operating Schedules - Weekly</label>
    </listViews>
    <listViews>
        <fullName>Operating_Schedules_by_Operator</fullName>
        <columns>NAME</columns>
        <columns>PhysicalAsset__c</columns>
        <columns>Active__c</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Schedule_Type__c</columns>
        <columns>TypeofContract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OperatingSchedule__c.Daily</value>
        </filters>
        <filters>
            <field>Preferred_Operator__c</field>
            <operation>equals</operation>
            <value>05005377</value>
        </filters>
        <label>Schedules by Preferred Operator - Daily</label>
    </listViews>
    <listViews>
        <fullName>Schedules_by_Preferred_Operator</fullName>
        <columns>NAME</columns>
        <columns>PhysicalAsset__c</columns>
        <columns>Active__c</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Schedule_Type__c</columns>
        <columns>TypeofContract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Preferred_Operator__c</field>
            <operation>equals</operation>
        </filters>
        <label>Schedules by Preferred Operator</label>
    </listViews>
    <listViews>
        <fullName>Schedules_by_Preferred_Operator_Weekly</fullName>
        <columns>NAME</columns>
        <columns>PhysicalAsset__c</columns>
        <columns>Active__c</columns>
        <columns>Account_Location__c</columns>
        <columns>Preferred_Operator__c</columns>
        <columns>Sales_Organization__c</columns>
        <columns>Schedule_Type__c</columns>
        <columns>TypeofContract__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>OperatingSchedule__c.Weekly_Schedules</value>
        </filters>
        <filters>
            <field>Preferred_Operator__c</field>
            <operation>equals</operation>
        </filters>
        <label>Schedules by Preferred Operator - Weekly</label>
    </listViews>
    <nameField>
        <displayFormat>Schedule-{0}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Schedules</pluralLabel>
    <recordTypes>
        <fullName>Daily</fullName>
        <active>true</active>
        <description>This is the default template for daily executed operating batches.</description>
        <label>Daily</label>
    </recordTypes>
    <recordTypes>
        <fullName>Every_Day</fullName>
        <active>true</active>
        <description>Regular schema to indicate operating tasks for every day usage.</description>
        <label>Every Day</label>
    </recordTypes>
    <recordTypes>
        <fullName>Machine_Clean_Operating</fullName>
        <active>true</active>
        <description>Used for creating machine clean operating schedules.</description>
        <label>Machine Clean Operating</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weekly_Schedules</fullName>
        <active>true</active>
        <description>This is the default for weekly schedules.</description>
        <label>Weekly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TS_AllFieldsShouldbePopulated</fullName>
        <active>true</active>
        <description>All Large, Cups and Small fields should be populated for this operating schedule.</description>
        <errorConditionFormula>/*Karen Hung Dec 11, 2020 DOO-5060*/
IF($Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c,
RecordType.Name = &quot;Daily&quot; &amp;&amp;
OR(
ISPICKVAL( LM_1_Monday__c,&quot;&quot;),
ISPICKVAL( LM_1_Tuesday__c ,&quot;&quot;),
ISPICKVAL( LM_1_Wednesday__c ,&quot;&quot;),
ISPICKVAL( LM_1_Thursday__c ,&quot;&quot;),
ISPICKVAL( LM_1_Friday__c ,&quot;&quot;),
ISPICKVAL( LM_1_Saturday__c ,&quot;&quot;),
ISPICKVAL( LM_1_Sunday__c ,&quot;&quot;),
ISPICKVAL( LM_2_Monday__c,&quot;&quot;),
ISPICKVAL( LM_2_Tuesday__c ,&quot;&quot;),
ISPICKVAL( LM_2_Wednesday__c ,&quot;&quot;),
ISPICKVAL( LM_2_Thursday__c ,&quot;&quot;),
ISPICKVAL( LM_2_Friday__c ,&quot;&quot;),
ISPICKVAL( LM_2_Saturday__c ,&quot;&quot;),
ISPICKVAL( LM_2_Sunday__c ,&quot;&quot;),
ISPICKVAL( SM_1_Monday__c,&quot;&quot;),
ISPICKVAL( SM_1_Tuesday__c ,&quot;&quot;),
ISPICKVAL( SM_1_Wednesday__c ,&quot;&quot;),
ISPICKVAL( SM_1_Thursday__c ,&quot;&quot;),
ISPICKVAL( SM_1_Friday__c ,&quot;&quot;),
ISPICKVAL( SM_1_Saturday__c ,&quot;&quot;),
ISPICKVAL( SM_1_Sunday__c ,&quot;&quot;),
ISPICKVAL( SM_2_Monday__c,&quot;&quot;),
ISPICKVAL( SM_2_Tuesday__c ,&quot;&quot;),
ISPICKVAL( SM_2_Wednesday__c ,&quot;&quot;),
ISPICKVAL( SM_2_Thursday__c ,&quot;&quot;),
ISPICKVAL( SM_2_Friday__c ,&quot;&quot;),
ISPICKVAL( SM_2_Saturday__c ,&quot;&quot;),
ISPICKVAL( SM_2_Sunday__c ,&quot;&quot;),
ISPICKVAL( C_1_Monday__c,&quot;&quot;),
ISPICKVAL( C_1_Tuesday__c ,&quot;&quot;),
ISPICKVAL( C_1_Wednesday__c ,&quot;&quot;),
ISPICKVAL( C_1_Thursday__c ,&quot;&quot;),
ISPICKVAL( C_1_Friday__c ,&quot;&quot;),
ISPICKVAL( C_1_Saturday__c ,&quot;&quot;),
ISPICKVAL( C_1_Sunday__c ,&quot;&quot;),
ISPICKVAL( C_2_Monday__c,&quot;&quot;),
ISPICKVAL( C_2_Tuesday__c ,&quot;&quot;),
ISPICKVAL( C_2_Wednesday__c ,&quot;&quot;),
ISPICKVAL( C_2_Thursday__c ,&quot;&quot;),
ISPICKVAL( C_2_Friday__c ,&quot;&quot;),
ISPICKVAL( C_2_Saturday__c ,&quot;&quot;),
ISPICKVAL( C_2_Sunday__c ,&quot;&quot;)
),
FALSE
)</errorConditionFormula>
        <errorMessage>The Value &apos;None&apos; is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_CannotIndicate247ForComfortOperating</fullName>
        <active>true</active>
        <description>You cannot indicate a 24/7 schedule for an asset with comfort operating support only.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c &amp;&amp;
OP_247Customer__c = TRUE &amp;&amp;
ISPICKVAL(  PhysicalAsset__r.Machine_Care__c , &quot;Comfort Operating&quot;)</errorConditionFormula>
        <errorMessage>You cannot indicate a 24/7 schedule for an asset with comfort operating support only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_CreateScheduleForCanceledMachine</fullName>
        <active>true</active>
        <description>You cannot create a schedule for a canceled machine.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c &amp;&amp;
ISNEW() &amp;&amp;
ISPICKVAL( PhysicalAsset__r.AssetStatus__c , &quot;Canceled&quot;)</errorConditionFormula>
        <errorMessage>You cannot create a schedule for a canceled machine.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_DeclineForceLToNextBusDay</fullName>
        <active>true</active>
        <description>You cannot fora a L to the next business day (holiday) if the schedule indicates to schedule jobs on holidays.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c &amp;&amp;
ForceScheduleToNextBusinessDay__c = TRUE &amp;&amp;
Schedule_Tasks_for_Holiday__c = TRUE</errorConditionFormula>
        <errorMessage>You cannot fora a L to the next business day (holiday) if the schedule indicates to schedule jobs on holidays.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_NoSupportForFullCoOrSemi</fullName>
        <active>true</active>
        <description>You cannot create/activate an operating schedule for full co operating or semi operating machines or those with no machine care.</description>
        <errorConditionFormula>/*Karen Hung KTS-2694 ALM- 6754 25-04-2019*/
IF($Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c,
	AND(
	    OR(ISPICKVAL(PhysicalAsset__r.Machine_Care__c , &apos;Full Co Operating&apos;),
		    ISPICKVAL(PhysicalAsset__r.Machine_Care__c , &apos;Semi Operating&apos;),
		    ISPICKVAL(PhysicalAsset__r.Machine_Care__c , &apos;&apos;)
	    ),
	    OR(
		    ISNEW(),
		    Active__c
	    )
	),
	FALSE
)</errorConditionFormula>
        <errorMessage>You cannot create/activate an operating schedule for full co operating or semi operating machines or those with no machine care.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_Op_InitReDatemustbeSunday</fullName>
        <active>true</active>
        <description>Initial_Re_activation_Date__c must be a Sunday</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c &amp;&amp; 
MOD(   Start_Date__c  - DATE(1900, 1, 6), 7) &lt;&gt; 1 &amp;&amp;
ISPICKVAL( Schedule_Type__c , &quot;Weekly&quot;)</errorConditionFormula>
        <errorMessage>For weekly schedules the startdate can only be on a Sunday as it indicates the first rundate of the batch job to be executed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_Op_StartDatemustbeMonday</fullName>
        <active>true</active>
        <description>When the date entered is not a Monday the validation rule is preventing the save of the record. this is used for ensuring Batch job can generate Operating Tasks properly.</description>
        <errorConditionFormula>$Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c &amp;&amp;
(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7) &lt;&gt; 2 &amp;&amp;  ISPICKVAL(Schedule_Type__c , &quot;Regular&quot;))</errorConditionFormula>
        <errorMessage>The start date for regular schedule must be on a Monday.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TS_UpdateCommentWhenEdited</fullName>
        <active>true</active>
        <description>To require comment when operating schedule is being updated by the user</description>
        <errorConditionFormula>/*Karen Hung Jan 11, 2021 DOO-5040*/
IF($Setup.ValidationRulesSettings__c.OperatingScheduleValidationRules__c,
NOT(ISNEW()) &amp;&amp;
$User.LastName != &apos;JDE-Apex-Batch&apos; &amp;&amp; 
OR(NOT(ISCHANGED(Comment__c)) , ISBLANK(Comment__c)),
false
)</errorConditionFormula>
        <errorMessage>Please update the Comment field to indicate the reason why the schedule is edited.</errorMessage>
    </validationRules>
</CustomObject>